--- a/app/views/forum/index.html.erb
+++ b/app/views/forum/index.html.erb
@@ -1,26 +1,12 @@
-<h1>Listing posts</h1>
-<table>
-  <tr>
-    <th>Id</th>
-    <th>Title</th>
-    <th>Message</th>
-    <th>Author</th>
-  </tr>
 
 <% @posts.each do |post| %>
-  <tr>
-    <td><%=h post.id %></td>
-    <td><%=h post.title %></td>
-    <td><%=h post.message %></td>
-    <td><%=h post.author %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  <h1><%=h post.title %></h1>
+    <p><%=h post.message %></p>
+    <p><%=h post.author %></p>
+
 <% end %>
-</table>
+
 
 <br />
 
 <%= will_paginate @posts %>
-<%= link_to 'New post', new_post_path %>
